--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "cypress": "^13.2.0"
+    "axe-core": "^4.8.1",
+    "cypress": "^13.2.0",
+    "cypress-axe": "^1.5.0"
   }
 }
