chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "showcase2023",
-  "version": "0.1.0",
+  "name": "showcase2025",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,23 +10,23 @@
     "cypress-ui": "cypress open"
   },
   "dependencies": {
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "@types/node": "22.15.24",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.27.0",
+    "eslint-config-next": "15.3.2",
+    "next": "^15.3.2",
+    "postcss": "8.5.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "4.1.8",
+    "typescript": "5.8.3"
   },
   "devDependencies": {
-    "axe-core": "^4.8.1",
-    "cypress": "^13.2.0",
-    "cypress-axe": "^1.5.0"
+    "axe-core": "^4.10.3",
+    "cypress": "^14.4.0",
+    "cypress-axe": "^1.6.0"
   }
 }
