--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cypress-ui": "cypress open"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "22.15.24",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
