--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.21",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
+    "framer-motion": "^12.15.0",
     "next": "^15.3.2",
     "postcss": "8.5.4",
     "react": "19.1.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "axe-core": "^4.10.3",
     "cypress": "^14.4.0",
-    "cypress-axe": "^1.6.0"
+    "cypress-axe": "^1.6.0",
+    "eslint-plugin-react": "^7.37.5"
   }
 }
